--- a/index.html
+++ b/index.html
@@ -7848,7 +7848,10 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="Testing"><strong><u>Testing</u></strong><a class="anchor-link" href="#Testing">¶</a></h1>
+<h1 id="Testing"><strong><u>Testing</u></strong><a class="anchor-link" href="#Testing">¶</a></h1><h3 id="Manage-DB-Page"><u><strong>Manage DB Page</strong></u><a class="anchor-link" href="#Manage-DB-Page">¶</a></h3><img alt="user-settings" src="sources/testing/imgs/managedb/managedb_create.png" width="600"/>
+<img alt="user-settings" src="sources/testing/imgs/managedb/managedb_rename.png" width="600"/>
+<img alt="user-settings" src="sources/testing/imgs/managedb/managedb_deleteconfirm.png" width="600"/>
+<img alt="user-settings" src="sources/testing/imgs/managedb/managedb_delete.png" width="600"/>
 </div>
 </div>
 </div>
