--- a/index.html
+++ b/index.html
@@ -7905,6 +7905,29 @@ a.anchor-link {
 </div>
 </div>
 </div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h1 id="Evaluation"><strong><u>Evaluation</u></strong><a class="anchor-link" href="#Evaluation">¶</a></h1><p>Overall, I somewhat achieved a working solution for my objectives given the time constraints.</p>
+<ol>
+<li><strong>Database Management:</strong> The solution successfully managed a database containing information about people, medicine, reminders, and logs. This means that it was able to create, read, update, and delete data in an organised and efficient manner.</li>
+<li><strong>Medicine Intake Logging and Reminders:</strong> The solution could successfully log when a user took their medicine and set reminders for when the next dose should be taken. This is a crucial feature for ensuring that users take their medication on time and don't miss any doses.</li>
+<li><strong>User Interface:</strong> The User Interface (UI) was easily interpretable and made sense to users. This means that users could easily navigate through the application and understand how to use its features without much difficulty.</li>
+<li><strong>Error Handling:</strong> The solution had error handling for several situations. This means that it was able to anticipate and handle potential errors in a way that prevented the application from crashing and provided useful feedback to the user.</li>
+</ol>
+<p>However, there were also some areas where the solution fell short:</p>
+<ol>
+<li><strong>UI Recoding:</strong> The UI had to be recoded from HTML (using the Bootstrap framework) to PyQt6 due to issues with the navbar. This was a time-consuming process that had to be done late at night, which may have affected the quality of the code, and ultimately lost a few hours of work.</li>
+<li><strong>Database Access Issues:</strong> There were issues with how the database was accessed, which could lead to connection issues or unexpected errors. This suggests that the solution could benefit from a more robust and reliable method of database access.</li>
+<li><strong>Unfinished Parts:</strong> Some parts of the solution were left unfinished. For example, there were no notification reminders, the user settings page was purely cosmetic because the login system wasn't even attempted, and some error handling wasn't introduced. These are areas that could be improved in future iterations of the solution.</li>
+</ol>
+</div>
+</div>
+</div>
+</div>
 </main>
 </body>
 </html>
